# AsusTufFanControl_Linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  asus-battery-limit.service  asus-tuf-fan-control.desktop  main.cpp  org.asus.fancontrol.policy  setup.sh
src/: AuraController.cpp  AuraController.h  FanController.cpp  FanController.h  FanCurveController.cpp  FanCurveController.h  MtpWorker.cpp  SystemStatsMonitor.cpp  SystemStatsMonitor.h
ui/: GraphCard.qml  Main.qml  StatsCard.qml
ui/components/: Sidebar.qml
ui/pages/: AuraPage.qml  BatteryPage.qml  DashboardPage.qml  FanPage.qml
